--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,27 +38,17 @@ jobs:
       - name: Build
         run: yarn build
 
-      # auth
-      - name: Google Auth
-        id: auth
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_JSON }}
-      
-      # deploy
       - name: Deploy
-        id: deploy
-        uses: google-github-actions/deploy-cloud-functions@v1
-        with: 
-          name: nuki-opener
-          runtime: nodejs16
-          source_dir: bin
-          memory_mb: 128
-          region: europe-west3
-          max_instances: 1
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          
-          env_vars: API_AUTH=${{ secrets.API_AUTH }},DOOR_FLOOR=${{ secrets.DOOR_FLOOR }},DOOR_STREET=${{ secrets.DOOR_STREET }},NUKI_TOKEN=${{ secrets.NUKI_TOKEN }},
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          PROJECT_ID: ${{ secrets.PROJECT_ID }}
+          API_AUTH: ${{ secrets.API_AUTH }}
+          DOOR_FLOOR: ${{ secrets.DOOR_FLOOR }}
+          DOOR_STREET: ${{ secrets.DOOR_STREET }}
+          NUKI_TOKEN: ${{ secrets.NUKI_TOKEN }}
 
       - name: Info
         run: 'curl "${{ steps.deploy.outputs.url }}"'
