--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,13 @@ jobs:
         run: yarn build
 
       - name: Deploy
-        uses: w9jds/firebase-action@master
+        uses: convictional/gcp-storage-action@maste
         with:
-          args: deploy --only functions
+          application_credentials: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
+          command: gcloud builds submit
         env:
-          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
           API_AUTH: ${{ secrets.API_AUTH }}
           DOOR_FLOOR: ${{ secrets.DOOR_FLOOR }}
           DOOR_STREET: ${{ secrets.DOOR_STREET }}
           NUKI_TOKEN: ${{ secrets.NUKI_TOKEN }}
-
-      - name: Info
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
