--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn build
 
       - name: Deploy
-        uses: convictional/gcp-storage-action@maste
+        uses: convictional/gcp-storage-action@master
         with:
           application_credentials: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.PROJECT_ID }}
