--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
         with:
           application_credentials: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.PROJECT_ID }}
-          command: "gcloud builds submit"
-          
+          action: "gcloud builds submit"
+
         env:
           API_AUTH: ${{ secrets.API_AUTH }}
           DOOR_FLOOR: ${{ secrets.DOOR_FLOOR }}
