--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           application_credentials: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.PROJECT_ID }}
-          action: "gcloud builds submit"
+          command: gcloud builds submit
 
         env:
           API_AUTH: ${{ secrets.API_AUTH }}
