--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,17 @@ jobs:
           DOOR_STREET: ${{ secrets.DOOR_STREET }}
           NUKI_TOKEN: ${{ secrets.NUKI_TOKEN }}
 
+      - name: GCP Auth
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
+
       # GCP
       - name: Setup GCLoud
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v1
         with:
-          version: 'latest'
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          version: '>= 363.0.0'
           project_id: ${{ secrets.PROJECT_ID }}
 
       - name: Deploy
